alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ h1 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: slideIn 0.9s ease forwards;
+  text-align: center;
 }
 
 .formDiv {
@@ -80,13 +81,13 @@ label {
   font-size: 1rem;
   font-weight: bold;
   margin-bottom: 1rem;
-  margin-left: -236px;
+  /* margin-left: -236px; */
   background: linear-gradient(to right, #a3089e, #0CBABA);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 input[type="text"] {
-  width: 30%;
+  min-width: 18%;
   padding: 10px;
   font-size: 1rem;
   border: 1px solid #ccc;
@@ -125,11 +126,12 @@ input[type="submit"]:hover {
   margin-left: 12rem;
   flex-direction: column;
   align-items: center;
-  width: 22%;
+  width: 28%;
   height: 42vh;
-  max-width: 600px;
+  /* max-width: 600px; */
+  margin-top: 4rem;
   justify-content: center;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: linear-gradient(to right, #a3089e, #0CBABA);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -139,10 +141,17 @@ input[type="submit"]:active{
   background-color: transparent;
 }
 .github-info{
+  /* height: 200px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center; */
+
   margin-top: 4rem;
   animation: slideIn 0.4s ease forwards;
 }
-
+.input-form{
+}
 
 @keyframes placeholderAnimation {
   0% {
