--- a/src/components/profilePage/styles.css
+++ b/src/components/profilePage/styles.css
@@ -105,7 +105,7 @@ select option {
     list-style-type: none;
     padding: 0;
     height: 80vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 
 }
 .repositories a{
